# Qt1

./: CMakeLists.txt  TemperatureGUI.hpp  main.cpp
